--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Python Job workflow
 on:
   schedule:
-    - cron: '/5 * * * *' # Run every day at UTC 00:00
+    - cron: '*/5 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
