--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: python -m pip install selenium
       - name: Run Python script
         run: python main.py
