--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Python Job workflow
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '1 1 1 * *'
 jobs:
   build:
     runs-on: ubuntu-latest
